import Foundation

/// Shared enum for panel selection (left, right, full)
enum Panel {
    case left, right, full
}
