//
//  MainViewModel.swift
//  visionApp
//
//  Created by Roberto Rojo Sahuquillo on 5/8/25.
//

import SwiftUI
import Combine
import AVFoundation

class MainViewModel: NSObject, ObservableObject {
    @Published var selectedIllness: Illness?
    @Published var filterEnabled: Bool = true
    @Published var centralFocus: Double = 0.5
    @Published var isCardboardMode: Bool = false
    @Published var currentRoute: AppRoute = .splash
    
    // List of available illnesses for IllnessListView
    let illnesses: [Illness] = [
        Illness(name: "Cataracts", description: "Simula visión con cataratas.", filterType: .cataracts),
        Illness(name: "Glaucoma", description: "Simula visión con glaucoma.", filterType: .glaucoma),
        Illness(name: "Macular Degeneration", description: "Simula degeneración macular.", filterType: .macularDegeneration),
        Illness(name: "Tunnel Vision", description: "Simula visión en túnel.", filterType: .tunnelVision),
        Illness(name: "Hemianopsia", description: "Simula hemianopsia.", filterType: .hemianopsia),
        Illness(name: "Blurry Vision", description: "Simula visión borrosa.", filterType: .blurryVision),
        Illness(name: "Central Scotoma", description: "Simula escotoma central.", filterType: .centralScotoma),
        Illness(name: "Diabetic Retinopathy", description: "Simula retinopatía diabética.", filterType: .diabeticRetinopathy),
        Illness(name: "Deuteranopia", description: "Simula deuteranopia (daltonismo).", filterType: .deuteranopia),
        Illness(name: "Astigmatism", description: "Simula astigmatismo.", filterType: .astigmatism)
    ]

    // Control global de reconocimiento
    @Published var isSpeechEnabled: Bool = true {
        didSet {
            if isSpeechEnabled {
                speechService.startRecognition()
            } else {
                speechService.stopRecognition()
            }
        }
    }

    // Ajustes específicos por filtro
    @Published var cataractsSettings: CataractsSettings = .defaults
    @Published var glaucomaSettings: GlaucomaSettings = .defaults
    @Published var macularDegenerationSettings: MacularDegenerationSettings = .defaults
    @Published var tunnelVisionSettings: TunnelVisionSettings = .defaults

    // Nuevos ajustes por filtro
    @Published var blurryVisionSettings: BlurryVisionSettings = .defaults
    @Published var centralScotomaSettings: CentralScotomaSettings = .defaults
    @Published var hemianopsiaSettings: HemianopsiaSettings = .defaults
    
    // VR/Cardboard settings
    @Published var vrSettings: VRSettings = .defaults

    // NUEVO: Síntomas combinables (post-proceso global)
    @Published var combinedSymptomsEnabled: Bool = false
    @Published var combinedSymptoms: CombinedSymptomsSettings = .defaults

    // Wrapper de ajustes según la enfermedad seleccionada
    var currentIllnessSettings: IllnessSettings? {
        guard let type = selectedIllness?.filterType else { return nil }
        switch type {
        case .cataracts:
            return .cataracts(cataractsSettings)
        case .glaucoma:
            return .glaucoma(glaucomaSettings)
        case .macularDegeneration:
            return .macular(macularDegenerationSettings)
        case .tunnelVision:
            return .tunnel(tunnelVisionSettings)
        case .blurryVision:
            return .blurryVision(blurryVisionSettings)
        case .centralScotoma:
            return .centralScotoma(centralScotomaSettings)
        case .hemianopsia:
            return .hemianopsia(hemianopsiaSettings)
        case .diabeticRetinopathy:
            return .diabeticRetinopathy(cataractsSettings)
        case .deuteranopia:
            return .deuteranopia(cataractsSettings)
        case .astigmatism:
            return .astigmatism(cataractsSettings)
        }
    }

    @ObservedObject var speechService: SpeechRecognitionService
    private var cancellables = Set<AnyCancellable>()

    var navigateToIllnessList: (() -> Void)?

    init(speechService: SpeechRecognitionService = SpeechRecognitionService()) {
        self.speechService = speechService
        super.init()
        setupSpeechRecognitionBinding()
        // Arrancar si está habilitado
        if isSpeechEnabled {
            self.speechService.requestAuthorization { [weak self] ok in
                if ok { 
                    self?.speechService.startRecognition()
                }
            }
        }
    }

    private func setupSpeechRecognitionBinding() {
        speechService.$lastCommand
            .receive(on: DispatchQueue.main)
            .sink { [weak self] command in
                guard let self = self else { return }
                let lowercased = command.lowercased()
                guard !lowercased.isEmpty else { return }

                if lowercased.contains("volver") || lowercased.contains("atrás") || lowercased.contains("atras") || lowercased.contains("back") || lowercased.contains("go back") {
                    self.navigateToIllnessList?()
                    self.speak("Volviendo a la selección de enfermedad")
                    return
                }
                if lowercased.contains("cataracts") || lowercased.contains("cataratas") {
                    self.selectedIllness = Illness(name: "Cataracts", description: "Simula visión con cataratas.", filterType: .cataracts)
                    self.speak("Filtro de cataratas activado")
                } else if lowercased.contains("glaucoma") {
                    self.selectedIllness = Illness(name: "Glaucoma", description: "Simula visión con glaucoma.", filterType: .glaucoma)
                    self.speak("Filtro de glaucoma activado")
                } else if lowercased.contains("macular") || lowercased.contains("degeneración macular") || lowercased.contains("degeneracion macular") {
                    self.selectedIllness = Illness(name: "Macular Degeneration", description: "Simula degeneración macular.", filterType: .macularDegeneration)
                    self.speak("Filtro de degeneración macular activado")
                } else if lowercased.contains("tunnel vision") || lowercased.contains("visión de túnel") || lowercased.contains("vision de tunel") || lowercased.contains("tunel") {
                    self.selectedIllness = Illness(name: "Tunnel Vision", description: "Simula visión en túnel.", filterType: .tunnelVision)
                    self.speak("Filtro de visión en túnel activado")
                } else if lowercased.contains("visión borrosa") || lowercased.contains("vision borrosa") || lowercased.contains("blurry") {
                    self.selectedIllness = Illness(name: "Blurry Vision", description: "Simula visión borrosa simple.", filterType: .blurryVision)
                    self.speak("Filtro de visión borrosa activado")
                } else if lowercased.contains("escotoma") {
                    self.selectedIllness = Illness(name: "Central Scotoma", description: "Simula escotoma central.", filterType: .centralScotoma)
                    self.speak("Filtro de escotoma central activado")
                } else if lowercased.contains("hemianopsia") || lowercased.contains("hemianopia") {
                    self.selectedIllness = Illness(name: "Hemianopsia", description: "Simula hemianopsia.", filterType: .hemianopsia)
                    self.speak("Filtro de hemianopsia activado")
                // Diabetic Retinopathy
                } else if lowercased.contains("retinopathy") || lowercased.contains("retinopatía") || lowercased.contains("diabetic") || lowercased.contains("diabética") {
                    self.selectedIllness = Illness(name: "Diabetic Retinopathy", description: "Simula retinopatía diabética.", filterType: .diabeticRetinopathy)
                    self.speak("Filtro de retinopatía diabética activado")
                // Color Blindness (Deuteranopia)
                } else if lowercased.contains("deuteranopia") || lowercased.contains("deuteranopia") || lowercased.contains("color blindness") || lowercased.contains("daltonismo") {
                    self.selectedIllness = Illness(name: "Color Blindness (Deuteranopia)", description: "Simula deuteranopia.", filterType: .deuteranopia)
                    self.speak("Filtro de deuteranopia activado")
                // Astigmatism
                } else if lowercased.contains("astigmatism") || lowercased.contains("astigmatismo") {
                    self.selectedIllness = Illness(name: "Astigmatism", description: "Simula astigmatismo.", filterType: .astigmatism)
                    self.speak("Filtro de astigmatismo activado")
                }
            }
            .store(in: &cancellables)
    }

    // Coordina TTS con el reconocimiento para evitar auto-transcripción
    func speak(_ text: String) {
        // Pausar reconocimiento temporalmente
        let wasListening = speechService.isListening
        if wasListening {
            speechService.stopRecognition()
        }
        
        DispatchQueue.main.async { [weak self] in
            guard let self = self else { return }
            
            let utterance = AVSpeechUtterance(string: text)
            if let lang = Locale.preferredLanguages.first {
                utterance.voice = AVSpeechSynthesisVoice(language: lang)
            } else {
                utterance.voice = AVSpeechSynthesisVoice(language: "es-ES")
            }
            utterance.rate = AVSpeechUtteranceDefaultSpeechRate

            let synthesizer = AVSpeechSynthesizer()
            synthesizer.delegate = self
            synthesizer.speak(utterance)

            objc_setAssociatedObject(self, &AssociatedKeys.synthKey, synthesizer, .OBJC_ASSOCIATION_RETAIN_NONATOMIC)
            objc_setAssociatedObject(self, &AssociatedKeys.wasListeningKey, wasListening, .OBJC_ASSOCIATION_RETAIN_NONATOMIC)
        }
    }
    
    // MARK: - Methods called by AppCoordinator
    
    func updateCurrentRoute(_ route: AppRoute) {
        currentRoute = route
    }
    
    func selectIllness(by filterType: IllnessFilterType) {
        selectedIllness = Illness(name: filterType.displayName, description: "", filterType: filterType)
        speak("Filtro de \(filterType.displayName) activado")
    }
    
    func increaseIntensity() {
        centralFocus = min(centralFocus + 0.1, 1.0)
        speak("Intensidad aumentada")
    }
    
    func decreaseIntensity() {
        centralFocus = max(centralFocus - 0.1, 0.0)
        speak("Intensidad disminuida")
    }
    
    func enableFilter() {
        filterEnabled = true
        speak("Filtro activado")
    }
    
    func disableFilter() {
        filterEnabled = false
        speak("Filtro desactivado")
    }
    
    func enableVRMode() {
        isCardboardMode = true
        speak("Modo VR activado")
    }
    
    func disableVRMode() {
        isCardboardMode = false
        speak("Modo VR desactivado")
    }
    
    func navigateBack() {
        navigateToIllnessList?()
        speak("Volviendo atrás")
    }
}

private enum AssociatedKeys {
    static var synthKey: UInt8 = 0
    static var wasListeningKey: UInt8 = 1
}

extension MainViewModel: AVSpeechSynthesizerDelegate {
    func speechSynthesizer(_ synthesizer: AVSpeechSynthesizer, didFinish utterance: AVSpeechUtterance) {
        objc_setAssociatedObject(self, &AssociatedKeys.synthKey, nil, .OBJC_ASSOCIATION_ASSIGN)
        
        // Reanudar reconocimiento si estaba activo
        if let wasListening = objc_getAssociatedObject(self, &AssociatedKeys.wasListeningKey) as? Bool, 
           wasListening, 
           isSpeechEnabled {
            speechService.startRecognition()
        }
        objc_setAssociatedObject(self, &AssociatedKeys.wasListeningKey, nil, .OBJC_ASSOCIATION_ASSIGN)
    }

    func speechSynthesizer(_ synthesizer: AVSpeechSynthesizer, didCancel utterance: AVSpeechUtterance) {
        objc_setAssociatedObject(self, &AssociatedKeys.synthKey, nil, .OBJC_ASSOCIATION_ASSIGN)
        
        // Reanudar reconocimiento si estaba activo
        if let wasListening = objc_getAssociatedObject(self, &AssociatedKeys.wasListeningKey) as? Bool, 
           wasListening, 
           isSpeechEnabled {
            speechService.startRecognition()
        }
        objc_setAssociatedObject(self, &AssociatedKeys.wasListeningKey, nil, .OBJC_ASSOCIATION_ASSIGN)
    }
}
